fixed indentation for vis wall footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Coded Glass | Immersive Scholar</title>
   <link href="app.css" rel="stylesheet"></head>
   <body>
+    <!-- TODO Turn animation back on when done!! -->
     <div class="slide-title-container no-anim">
       <h1 id="slide-title"></h1>
     </div>
