testing new local img viewer

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>Coded Glass | Immersive Scholar</title>
   <link href="app.css" rel="stylesheet"></head>
   <body>
-    <!-- TODO Turn animation back on when done!! -->
-    <div class="slide-title-container no-anim">
-      <h1 id="slide-title"></h1>
+    <div class="overlay-img-container hidden">
+      <div class="slide-title-container">
+        <h1 id="slide-title"></h1>
+      </div>
+      <div class="slide-desc-overlay">
+        <p class="slide-desc-text"></p>
+      </div>
+      <img class="overlay-img">
     </div>
-    <div class="slide-desc-overlay no-anim">
-      <p class="slide-desc-text no-anim"></p>
-    </div>
-    <iframe class="slideshow no-anim"></iframe>
-    <div class="slideshow-bg"></div>
     <main class="main-container">
       <div class="main-txt">
           <h1 class="main-title">Coded Glass</h1>
