First vers of local Img Viewer w/ fade transitions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <div class="slide-desc-overlay">
         <p class="slide-desc-text"></p>
       </div>
-      <img class="overlay-img">
+      <button class="overlay-button" id="close-button">×</button>
+      <img class="overlay-img" id="top-img">
+      <img class="overlay-img" id="bottom-img">
     </div>
     <main class="main-container">
       <div class="main-txt">
